features spacing fix, navbar hamburger menu position fix.

--- a/src/assets/scss/components/navbar.scss
+++ b/src/assets/scss/components/navbar.scss
@@ -38,7 +38,7 @@
 }
 
 #menu-nav {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     bottom: 0;
@@ -51,19 +51,16 @@
     transition: all .3s linear;
     transform: translateY(-100%);
     z-index: 1010;
+    height: 100%;
+    max-height: 100vh;
 
     @media(min-width: 768px) {
         display: none;
     }
 
     .mobile-nav {
-
-        left: 0;
-        top: 0;
-
         color: $text-alt;
-        height: 100%;
-        max-height: 100vh;
+
         // width: 0;
 
         overflow: hidden;
